<resources>
    <string name="app_name">Inspection</string>
    <string name="login">登 入</string>
    <string name="company_info">浙江中正智能科技有限公司</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_progress_format">当前检查次数：%d 剩余检查次数：%d</string>
    <string name="scan">扫描</string>
    <string name="version">版本号：</string>
    <string name="setting">设置</string>
    <string name="inspector_manage">检查员管理</string>
    <string name="inspect_point">检查点</string>
    <string name="inspector">检查员</string>
    <string name="time">检查时间</string>
    <string name="result">检查结果</string>
    <string name="more"><u>查看更多</u></string>
    <string name="inspect_log">检查记录</string>
    <string name="problem_description">问题描述</string>
    <string name="pic_description">图片描述</string>
    <string name="submit">提交</string>
    <string name="inspect_content">检查内容</string>
    <string name="update">检查新版本</string>
    <string name="inspect_point_name">检查点名称</string>
    <string name="inspect_item_name">检查项名称</string>
    <string name="inspect_item">检查项</string>
</resources>
