<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/ll_log"
    android:background="@drawable/white_btn_bg"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_log_point"
        style="@style/tv_log"
        android:layout_weight="3"
        android:hint="@string/inspect_point" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_log_time"
        android:hint="@string/time"
        android:layout_weight="3"
        style="@style/tv_log" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_log_result"
        android:hint="@string/result"
        android:layout_weight="2"
        style="@style/tv_log" />

</LinearLayout>