<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/inspect_item"
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_bg_gray_stroke_n"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/dark"
        android:hint="@string/inspect_item_name"
        android:id="@+id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/inspect_point"
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_bg_gray_stroke_n"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/dark"
        android:hint="@string/inspect_point_name"
        android:id="@+id/tv_point_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/inspect_content"
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_margin="10dp"
        android:id="@+id/rv_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_submit"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:background="@drawable/orange_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

</LinearLayout>