<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    tools:context="com.miaxis.inspection.view.fragment.HomePageFragment">

    <android.support.v7.widget.CardView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp">



    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">



    </android.support.v7.widget.CardView>

    <LinearLayout
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:text="@string/inspect_log"
            android:textSize="14sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/blue_band_dark"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:textSize="13sp"
            android:textColor="@color/blue_band_dark2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_weight="3"
            style="@style/tv_log_title"
            android:text="@string/inspect_point" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_log_time"
            android:text="@string/time"
            android:layout_weight="3"
            style="@style/tv_log_title" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_log_result"
            android:text="@string/result"
            android:layout_weight="2"
            style="@style/tv_log_title" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_log"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
