<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miaxis.inspection.view.activity.LogDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_log_point"
            style="@style/tv_log_detail"
            android:layout_weight="3"
            android:hint="@string/inspect_point" />

        <View
            android:background="@color/gray_light"
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_log_result"
            android:hint="@string/result"
            android:layout_weight="2"
            style="@style/tv_log_detail" />

    </LinearLayout>

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_log_time"
            android:hint="@string/time"
            android:layout_weight="3"
            style="@style/tv_log_detail" />

        <View
            android:background="@color/gray_light"
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_log_inspector"
            style="@style/tv_log_detail"
            android:layout_weight="2"
            android:hint="@string/inspector" />

    </LinearLayout>

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">



    </android.support.v7.widget.RecyclerView>

</LinearLayout>
