<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.miaxis.inspection.view.activity.PointManageActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_weight="3"
            style="@style/tv_log_title"
            android:text="@string/inspect_point" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_log_time"
            android:text="@string/time"
            android:layout_weight="3"
            style="@style/tv_log_title" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_log_result"
            android:text="@string/result"
            android:layout_weight="2"
            style="@style/tv_log_title" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
