<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/activity_padding"
    tools:context="com.miaxis.inspection.view.activity.LoginActivity">

    <ImageView
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:focusable="true"
        android:clickable="true"
        android:layout_gravity="end"
        android:tint="@color/colorPrimary"
        android:id="@+id/iv_config"
        android:src="@mipmap/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/white_bg_gray_stroke_n"
        android:text="logo"
        android:layout_width="match_parent"
        android:layout_height="120dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <android.support.v7.widget.CardView
        app:cardElevation="5dp"
        android:id="@+id/cv_login"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/inspector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/sp_inspector_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="密码"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"/>

            <Button
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@drawable/dark_bg_light_ripple"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>



    <FrameLayout
        android:visibility="invisible"
        android:id="@+id/fl_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <TextView
        android:layout_marginTop="@dimen/activity_padding"
        android:text="@string/company_info"
        android:gravity="center"
        android:textColor="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_light"
        android:text="@string/version" />

</LinearLayout>
